samples/_failures_safe/1761271793_05cb34_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_634be626.c: In function ‘main’:
./samples/SAFE/__tmp_634be626.c:138:35: error: expected ‘)’ at end of input
  138 |     if (decompressed_size != (size
      |                              ~    ^
      |                                   )
./samples/SAFE/__tmp_634be626.c:138:5: error: expected declaration or statement at end of input
  138 |     if (decompressed_size != (size
      |     ^~
